remove curl in rules demo

--- a/use_case_sport_classification/rules_extraction_demo.ipynb
+++ b/use_case_sport_classification/rules_extraction_demo.ipynb
@@ -105,39 +105,10 @@
    "source": [
     "## Loading a CNN model\n",
     "\n",
-    "**Model Weights**: We provide weights for a fine-tuned VGG on the SportsImageDataset. You can download it using the next cell or from our [Hugging Face repository](https://huggingface.co/HES-XPLAIN).\n",
+    "**Model Weights**: We provide weights for a fine-tuned VGG on the SportsImageDataset. You can download it using the next cell or from our [Hugging Face repository](https://huggingface.co/HES-XPLAIN). While using Github Codespace you can have direct access to the weight in the folder `./models_weight`.\n",
     "\n",
     "**Loading Weights** : By utilizing the functions and classes defined in our helpers file, you can initialize a VGG model and load the weights."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "f6b3ef06-b1b6-4874-b361-1352dcac12ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  1134  100  1134    0     0   6129      0 --:--:-- --:--:-- --:--:--  6129\n",
-      "100  516M  100  516M    0     0  99.5M      0  0:00:05  0:00:05 --:--:--  105M\n"
-     ]
-    }
-   ],
-   "source": [
-    "!curl -OL https://huggingface.co/HES-XPLAIN/sport_classification/resolve/main/VGGFineTuned.pth -o VGGFineTuned.pth && mv VGGFineTuned.pth models_weight/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c4bc8a3-3057-4be2-8d2e-971dda207dc7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
