Adjust rules_extraction for use on colab

--- a/use_case_sport_classification/rules_extraction_demo.ipynb
+++ b/use_case_sport_classification/rules_extraction_demo.ipynb
@@ -108,7 +108,7 @@
    "source": [
     "if use_colab:\n",
     "    # Install dependencies\n",
-    "    !pip install omnixai"
+    "    !pip install omnixai rules_extraction"
    ]
   },
   {
@@ -167,6 +167,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4104170d-39b3-4f82-9451-286873f1c1c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -p models_weight\n",
+    "!curl -OL https://huggingface.co/HES-XPLAIN/sport_classification/resolve/main/FineTunedEfficientNet_30epochs.pth -o FineTunedEfficientNet_30epochs.pth\n",
+    "!curl -OL https://huggingface.co/HES-XPLAIN/sport_classification/resolve/main/VGGFineTuned.pth -o VGGFineTuned.pth\n",
+    "!mv *.pth models_weight/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "97733ac6-93e8-45af-8d27-76bb5fdcb6a6",
    "metadata": {},
@@ -178,22 +191,6 @@
     "**Download dataset**: To make a propoer use of this demo, the dataset will be automatically downloaded and extracted in the data folder. You can download it using the next cell or from our [Hugging Face repository](https://huggingface.co/datasets/HES-XPLAIN/SportsImageClassification).\n",
     "\n",
     "**Problem Statement**: Our objective is to build a robust image classifier capable of accurately classifying sport images among the 100 predefined sports categories. The nature of the dataset, comprising images of various sports, makes it particularly suitable for introducing and visualizing XAI techniques."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e662654-5aeb-4d7d-8b89-d901bf739b79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "# GitHub Codespace compatibility\n",
-    "if 'use_case_sport_classification' not in sys.path[0]:\n",
-    "    root_path = os.path.join(sys.path[0], 'use_case_sport_classification')\n",
-    "    sys.path.append(root_path)\n",
-    "    os.chdir(root_path)"
    ]
   },
   {
