fix from colab test

--- a/use_case_sport_classification/rules_extraction_demo.ipynb
+++ b/use_case_sport_classification/rules_extraction_demo.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "if use_colab:\n",
     "    # Install dependencies\n",
-    "    !pip install omnixai rules_extraction"
+    "    !pip install rules_extraction"
    ]
   },
   {
