--- a/use_case_sport_classification/rules_extraction_demo.ipynb
+++ b/use_case_sport_classification/rules_extraction_demo.ipynb
@@ -169,7 +169,8 @@
    ],
    "source": [
     "!mkdir -p models_weight\n",
-    "!curl -OL https://huggingface.co/HES-XPLAIN/sport_classification/resolve/main/VGGSportsImageClassification.pth -o VGGSportsImageClassification.pth\n",
+    "!curl -OL https://huggingface.co/HES-XPLAIN/sport_classification/resolve/main/FineTunedEfficientNet_30epochs.pth -o FineTunedEfficientNet_30epochs.pth\n",
+    "!curl -OL https://huggingface.co/HES-XPLAIN/sport_classification/resolve/main/VGGFineTuned.pth -o VGGFineTuned.pth\n",
     "!mv *.pth models_weight/"
    ]
   },
