Add colab compatibility to dimlp notebooks

--- a/use_case_dimlpfidex/obesityCvdRisk.ipynb
+++ b/use_case_dimlpfidex/obesityCvdRisk.ipynb
@@ -38,6 +38,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "## Google Colab Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section prepares the notebook for use with Google Colaboratory. If applicable, change the following variable to True:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Colab compatibility\n",
+    "use_colab = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if use_colab:\n",
+    "    # ensure the directory is empty\n",
+    "    !rm -rf * .config\n",
+    "\n",
+    "    !# install codebase from GitHub\n",
+    "    !git clone --no-checkout https://github.com/HES-XPLAIN/notebooks.git --depth=1 .\n",
+    "    !git config core.sparseCheckout true\n",
+    "    !git sparse-checkout set --cone\n",
+    "    !git sparse-checkout add use_case_dimlpfidex\n",
+    "    !git sparse-checkout reapply\n",
+    "    !git checkout main\n",
+    "\n",
+    "    # adjust folder structure\n",
+    "    !mv use_case_dimlpfidex/* .\n",
+    "    !rm -rf use_case_dimlpfidex/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Dataset and Problem Statement\n",
     "The dataset we'll be working with is called the [obesity or CVD risk](https://www.kaggle.com/datasets/aravindpcoder/obesity-or-cvd-risk-classifyregressorcluster/data) and is accessible on [Kaggle](https://www.kaggle.com). It comprises 2111 records of anonymized data concerning South American individuals and their dietary habits. In this notebook, our focus is on another medical challenge: classifying the risk of obesity based on various factors. These factors, drawn from the dataset, are outlined below with their original names:\n",
     "\n",
@@ -3469,7 +3517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
