--- a/use_case_dimlpfidex/breastCancerWisconsin.ipynb
+++ b/use_case_dimlpfidex/breastCancerWisconsin.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "6032ef9f-92e2-44dc-a11b-b224342bee29",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Exploring Dimlp and Fidex rule generation for breast cancer classification\n",
     "\n",
@@ -31,6 +29,58 @@
     "    5. Global ruleSet generation - FidexGlo.\n",
     "    6. Conclusion.\n",
     "    7. References."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e813050-5104-4b92-953b-341c3353ff2f",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Google Colab Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eb0be64-973d-4f62-895e-ce3ca8a75faa",
+   "metadata": {},
+   "source": [
+    "This section prepares the notebook for use with Google Colaboratory. If applicable, change the following variable to True:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c525f220-236f-45a8-890d-a211643844b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Colab compatibility\n",
+    "use_colab = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6182cfe3-b6f5-4a8d-92a4-0d3c9115fa5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if use_colab:\n",
+    "    # ensure the directory is empty\n",
+    "    !rm -rf * .config\n",
+    "\n",
+    "    !# install codebase from GitHub\n",
+    "    !git clone --no-checkout https://github.com/HES-XPLAIN/notebooks.git --depth=1 .\n",
+    "    !git config core.sparseCheckout true\n",
+    "    !git sparse-checkout set --cone\n",
+    "    !git sparse-checkout add use_case_dimlpfidex\n",
+    "    !git sparse-checkout reapply\n",
+    "    !git checkout main\n",
+    "\n",
+    "    # adjust folder structure\n",
+    "    !mv use_case_dimlpfidex/* .\n",
+    "    !rm -rf use_case_dimlpfidex/"
    ]
   },
   {
@@ -777,7 +827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
