--- a/use_case_dimlpfidex/cracks.ipynb
+++ b/use_case_dimlpfidex/cracks.ipynb
@@ -34,6 +34,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b69c9fc1-83f8-4ab0-8885-87fa40ab53e7",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Google Colab Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43239c34-0ea1-4a63-9690-5980aca0ca3f",
+   "metadata": {},
+   "source": [
+    "This section prepares the notebook for use with Google Colaboratory. If applicable, change the following variable to True:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "668b14ba-2aff-4f75-b5f7-8a590038a838",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Colab compatibility\n",
+    "use_colab = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25f749ff-7346-46ed-8fbe-32a9f9d89c3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if use_colab:\n",
+    "    # ensure the directory is empty\n",
+    "    !rm -rf * .config\n",
+    "\n",
+    "    !# install codebase from GitHub\n",
+    "    !git clone --no-checkout https://github.com/HES-XPLAIN/notebooks.git --depth=1 .\n",
+    "    !git config core.sparseCheckout true\n",
+    "    !git sparse-checkout set --cone\n",
+    "    !git sparse-checkout add use_case_dimlpfidex\n",
+    "    !git sparse-checkout reapply\n",
+    "    !git checkout main\n",
+    "\n",
+    "    # adjust folder structure\n",
+    "    !mv use_case_dimlpfidex/* .\n",
+    "    !rm -rf use_case_dimlpfidex/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "675fe6ce-7c47-4227-aeba-2bac55bde9af",
    "metadata": {},
    "source": [
@@ -1423,7 +1475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
