--- a/use_case_dimlpfidex/mnist.ipynb
+++ b/use_case_dimlpfidex/mnist.ipynb
@@ -33,6 +33,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f952aef7-ed55-469f-97ee-d5e6bf2315b1",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Google Colab Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e4775e0-f681-4a79-aa4a-253be2d0a234",
+   "metadata": {},
+   "source": [
+    "This section prepares the notebook for use with Google Colaboratory. If applicable, change the following variable to True:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2a4a194-d658-48e0-9ba2-1cb5422c2122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Colab compatibility\n",
+    "use_colab = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6526384-14eb-4644-8c95-fcbdcea574ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if use_colab:\n",
+    "    # ensure the directory is empty\n",
+    "    !rm -rf * .config\n",
+    "\n",
+    "    !# install codebase from GitHub\n",
+    "    !git clone --no-checkout https://github.com/HES-XPLAIN/notebooks.git --depth=1 .\n",
+    "    !git config core.sparseCheckout true\n",
+    "    !git sparse-checkout set --cone\n",
+    "    !git sparse-checkout add use_case_dimlpfidex\n",
+    "    !git sparse-checkout reapply\n",
+    "    !git checkout main\n",
+    "\n",
+    "    # adjust folder structure\n",
+    "    !mv use_case_dimlpfidex/* .\n",
+    "    !rm -rf use_case_dimlpfidex/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "165b9022-e8d3-4ed6-8566-ae2b64cede85",
    "metadata": {},
    "source": [
@@ -1409,7 +1461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
