Removed code block

--- a/use_case_dimlpfidex/gui.ipynb
+++ b/use_case_dimlpfidex/gui.ipynb
@@ -30,9 +30,7 @@
     "    6. Testing running algorithms using a generated configuration file.\n",
     "    7. References.\n",
     "\n",
-    "Let's start with a brief overview of the JavaScript Object Notation.\n",
-    "\n",
-    "> **Plase note that you need install the [`dimlpfidex` library](https://hes-xplain.github.io/documentation/installation-guide/) before using this notebook**"
+    "Let's start with a brief overview of the JavaScript Object Notation."
    ]
   },
   {
@@ -159,26 +157,7 @@
     "\n",
     "Our objective is to create a configuration file that references these files for executing the Fidex algorithm.\n",
     "\n",
-    "To begin, run the code below to launch an instance of the GUI. \n",
-    "\n",
-    "> If the code below does not work, try to install it with our [installation guide](https://hes-xplain.github.io/documentation/gui/)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24961304",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import subprocess, sys\n",
-    "\n",
-    "guiSrcPath='data/guiSources/'\n",
-    "\n",
-    "if sys.platform == 'linux' or sys.platform == 'darwin':\n",
-    "    subprocess.Popen([f\"{guiSrcPath}linux-0.0.3/dimlpfidex_gui\", \"&\"])\n",
-    "elif sys.platform == 'win32':\n",
-    "    subprocess.run([f\"{guiSrcPath}windows-0.0.3/dimlpfidex_gui.exe\"])"
+    "To begin, install our GUI according to our [installation guide](https://hes-xplain.github.io/documentation/gui/)."
    ]
   },
   {
