Corrected notebooks and added some references

--- a/use_case_dimlpfidex/cracks.ipynb
+++ b/use_case_dimlpfidex/cracks.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Welcome to HES-Xplain, our interactive platform designed to facilitate explainable artificial intelligence (XAI) techniques. In this use case, we dive into the classification with CNN models trained on the Cracks dataset. By the end of this notebook, you'll have a solid understanding of how to use a CNN to train the model and the Fidex algorithms to extract rules.\n",
     "\n",
-    "This notebook is an alternative to the [`Exploring CNN models and Fidex rule generation for MNIST classification`](TODO). It achieves the same goal but with a different dataset to show another application and result of our algorithms.\n",
+    "This notebook is an alternative to the [`Exploring CNN models and Fidex rule generation for MNIST classification`](mnist.ipynb). It achieves the same goal but with a different dataset to show another application and result of our algorithms.\n",
     "\n",
     "**Objectives:**\n",
     "\n",
@@ -219,7 +219,7 @@
     "\n",
     "It's time now to train our model. We will use a special type of model called a CNN (convolutional neural network).\n",
     "\n",
-    "We use our Python program called [cnnTrn](https://github.com/HES-XPLAIN/dimlpfidex/blob/main/trainings/cnnTrn.py). Let's begin with printing the program help message to observe every option available:"
+    "We use our Python program called [cnnTrn](https://hes-xplain.github.io/documentation/algorithms/training-methods/cnntrn/). Let's begin with printing the program help message to observe every option available:"
    ]
   },
   {
@@ -1444,10 +1444,15 @@
    "id": "605dcb45-4862-4268-bef2-068cf96de3d9",
    "metadata": {},
    "source": [
-    "# Références\n",
+    "# References\n",
     "\n",
-    "TODO : Article DimlpBT de Guido\n",
-    "Article Fidex de Guido (à venir)"
+    "HES-XPLAIN: [website](https://hes-xplain.github.io/), [Github page](https://github.com/HES-XPLAIN)\n",
+    "\n",
+    "Dataset: [source](https://www.kaggle.com/datasets/arunrk7/surface-crack-detection), [author](https://www.kaggle.com/aravindpcoder)\n",
+    "\n",
+    "Dimlpfidex: [Github repository](https://github.com/HES-XPLAIN/dimlpfidex), [documentation](https://hes-xplain.github.io/documentation/overview/)\n",
+    "\n",
+    "Algorithms: [randomForest](https://hes-xplain.github.io/documentation/algorithms/training-methods/randforeststrn/), [Fidex](https://hes-xplain.github.io/documentation/algorithms/fidex/fidex/), [FidexGloRules](https://hes-xplain.github.io/documentation/algorithms/fidex/fidexglorules), [FidexGloStats](https://hes-xplain.github.io/documentation/algorithms/fidex/fidexglostats)"
    ]
   },
   {
