--- a/use_case_aptos/use_case_aptos.ipynb
+++ b/use_case_aptos/use_case_aptos.ipynb
@@ -31,22 +31,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "4dff0175-60a1-4818-8cc3-aa74de232cdd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "\n",
-    "# Suppress all warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "019df0db-adc3-4018-8dad-f9566020effe",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Google Colab Setup"
    ]
@@ -61,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a9ae1d93-1683-4b93-b087-d18431568f04",
    "metadata": {},
    "outputs": [],
@@ -80,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "08aea813-d798-48ce-a8a8-dfc4c6dede9d",
    "metadata": {},
    "outputs": [],
@@ -104,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "72591da5-5726-4c24-a692-da45ae3fa7ff",
    "metadata": {},
    "outputs": [],
@@ -125,7 +114,9 @@
   {
    "cell_type": "markdown",
    "id": "7ff2d8a0-a257-44be-8087-f791c927595a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Workspace Setup"
    ]
@@ -148,14 +139,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "95792fb7-84bf-4b4d-bbfc-59d469ec62e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100  1127  100  1127    0     0   6385      0 --:--:-- --:--:-- --:--:--  6514\n",
+      "\n",
+      "  0  512M    0 24576    0     0  38866      0  3:50:20 --:--:--  3:50:20 38866\n",
+      "  4  512M    4 22.4M    0     0  17.0M      0  0:00:30  0:00:01  0:00:29 32.5M\n",
+      " 11  512M   11 61.0M    0     0  26.4M      0  0:00:19  0:00:02  0:00:17 36.3M\n",
+      " 22  512M   22  115M    0     0  34.9M      0  0:00:14  0:00:03  0:00:11 43.1M\n",
+      " 29  512M   29  151M    0     0  35.2M      0  0:00:14  0:00:04  0:00:10 41.3M\n",
+      " 40  512M   40  206M    0     0  38.8M      0  0:00:13  0:00:05  0:00:08 44.0M\n",
+      " 49  512M   49  254M    0     0  40.1M      0  0:00:12  0:00:06  0:00:06 46.1M\n",
+      " 58  512M   58  299M    0     0  41.0M      0  0:00:12  0:00:07  0:00:05 47.7M\n",
+      " 68  512M   68  350M    0     0  42.1M      0  0:00:12  0:00:08  0:00:04 46.8M\n",
+      " 77  512M   77  396M    0     0  42.3M      0  0:00:12  0:00:09  0:00:03 48.2M\n",
+      " 86  512M   86  441M    0     0  42.8M      0  0:00:11  0:00:10  0:00:01 47.0M\n",
+      " 94  512M   94  485M    0     0  42.9M      0  0:00:11  0:00:11 --:--:-- 46.4M\n",
+      "100  512M  100  512M    0     0  43.0M      0  0:00:11  0:00:11 --:--:-- 46.3M\n",
+      "Warning: Got more output options than URLs\n",
+      "'mv' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
     "!mkdir -p models_weight\n",
     "!curl -OL https://huggingface.co/HES-XPLAIN/VGGAptos/resolve/main/VGGAptos.pth -o VGGAptos.pth\n",
     "!mv *.pth models_weight/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d38a55dc-76e4-4218-a6a3-d716b4cc90e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100  1127  100  1127    0     0   7805      0 --:--:-- --:--:-- --:--:--  7936\n",
+      "\n",
+      "  6  512M    6 34.6M    0     0  65.3M      0  0:00:07 --:--:--  0:00:07 65.3M\n",
+      " 28  512M   28  146M    0     0  95.9M      0  0:00:05  0:00:01  0:00:04  112M\n",
+      " 50  512M   50  256M    0     0   101M      0  0:00:05  0:00:02  0:00:03  110M\n",
+      " 72  512M   72  369M    0     0   104M      0  0:00:04  0:00:03  0:00:01  111M\n",
+      " 94  512M   94  481M    0     0   106M      0  0:00:04  0:00:04 --:--:--  111M\n",
+      "100  512M  100  512M    0     0   106M      0  0:00:04  0:00:04 --:--:--  111M\n",
+      "Warning: Got more output options than URLs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Arthur\\Desktop\\notebooks\\use_case_aptos\\VGGAptos.pth\n",
+      "        1 file(s) moved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mkdir -p models_weight\n",
+    "!curl -OL https://huggingface.co/HES-XPLAIN/VGGAptos/resolve/main/VGGAptos.pth -o VGGAptos.pth\n",
+    "!move *.pth models_weight/\n"
    ]
   },
   {
@@ -185,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "37910eef-7c6e-43be-b27c-3145ab7192ef",
    "metadata": {},
    "outputs": [],
@@ -206,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "ae722ce6-9e7a-4cc5-b374-18a4c6a7369c",
    "metadata": {},
    "outputs": [],
@@ -219,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "a7d18de8-07a8-4111-a504-bbdb070e2c81",
    "metadata": {},
    "outputs": [],
@@ -288,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "f0f11fbf-5688-4b52-9d09-2efb7cd8253f",
    "metadata": {},
    "outputs": [
@@ -298,7 +358,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +367,7 @@
     "from scripts.model import VGGAptos\n",
     "\n",
     "model = VGGAptos()\n",
-    "model.load_state_dict(torch.load('./models_weight/VGGAptos.pth'))"
+    "model.load_state_dict(torch.load('./models_weight/VGGAptos.pth',  map_location=device))"
    ]
   },
   {
@@ -404,7 +464,9 @@
   {
    "cell_type": "markdown",
    "id": "39934fe2-7656-40c3-8f13-c94cc97528ab",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Traininig"
    ]
@@ -414,7 +476,7 @@
    "id": "24b3c58a-8766-45fe-8f3d-24be4a69af38",
    "metadata": {},
    "source": [
-    "As previously described, we've loaded a pretrained model that underwent fine-tuning. However, if desired, you have the option to further fine-tune it using either our train scripts or the train functions provided, both defined in ./scripts/train.py. To save on computation time, we've omitted the fine-tuning process here, but you can simply uncomment the next cell to observe its functionality. You will need to download the APTOS 2019 dataset and place it in a folder /data to match the script requirements."
+    "As previously described, we've loaded a pretrained model that underwent fine-tuning. However, if desired, you have the option to further fine-tune it using either our train scripts or the train functions provided, both defined in ./scripts/train.py. As we can't direclty provide an access to the dataset you will need to download the APTOS 2019 dataset and place it in a folder /data to match the script requirements before using it. "
    ]
   },
   {
@@ -636,9 +698,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rules2",
+   "display_name": "aptos-env",
    "language": "python",
-   "name": "rules2"
+   "name": "aptos-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -650,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
