--- a/use_case_dimlpfidex/gui.ipynb
+++ b/use_case_dimlpfidex/gui.ipynb
@@ -157,7 +157,7 @@
     "\n",
     "Our objective is to create a configuration file that references these files for executing the Fidex algorithm.\n",
     "\n",
-    "To begin, install our GUI according to our [installation guide](https://hes-xplain.github.io/documentation/gui/)."
+    "To begin, install our GUI according to our [installation guide](https://hes-xplain.github.io/documentation/dimlpfidex/gui/)."
    ]
   },
   {
@@ -236,9 +236,9 @@
    "source": [
     "# References\n",
     "\n",
-    "Dimlpfidex GUI: [documentation](https://hes-xplain.github.io/documentation/gui/), [Github repository](https://github.com/HES-XPLAIN/dimlpfidex/tree/main/dimlpfidex_gui)\n",
+    "Dimlpfidex GUI: [documentation](https://hes-xplain.github.io/documentation/dimlpfidex/gui/), [Github repository](https://github.com/HES-XPLAIN/dimlpfidex/tree/main/dimlpfidex_gui)\n",
     "\n",
-    "Fidex algorithm: [documentation](https://hes-xplain.github.io/documentation/algorithms/fidex/fidex/)"
+    "Fidex algorithm: [documentation](https://hes-xplain.github.io/documentation/dimlpfidex/fidex/fidex/)"
    ]
   }
  ],
