Added Colab config in omnixai notebook

--- a/use_case_dimlpfidex/omniXai_dimlpfidex.ipynb
+++ b/use_case_dimlpfidex/omniXai_dimlpfidex.ipynb
@@ -34,6 +34,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "## Google Colab Setup\n",
+    "This section prepares the notebook for use with Google Colaboratory. If applicable, change the following variable to True:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Colab compatibility\n",
+    "use_colab = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Dataset and Problem Statement\n",
     "The dataset we'll be working with is called the [Heart Attack Analysis & Prediction Dataset](https://www.kaggle.com/datasets/rashikrahmanpritom/heart-attack-analysis-prediction-dataset) and is accessible on [Kaggle](https://www.kaggle.com). It comprises 303 anonymized data records containing health information. In this notebook, our focus is predicting the risk of heart attack based on all given factors. By leveraging deep learning techniques and Fidex algorithms, we aim to not only achieve high classification performance but also gain insights into the attributes (pixels here) that contribute to the classification decisions."
    ]
