Update Dimlpfidex notebooks (#22)
* Removed useless files

* Removed pandas command silencing warnings

* Minor changes

* Removed code block

* removed sources

* Corrected notebooks and added some references

* Fixed links

* Updated content

* Added omnixai notebook

* Added Colab config in omnixai notebook

---------

Co-authored-by: ElSuperDado <damian.boquete@hotmail.com>
Co-authored-by: jeanmarc <jeanmarc.boutay@gmail.com>

--- a/use_case_dimlpfidex/cracks.ipynb
+++ b/use_case_dimlpfidex/cracks.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Welcome to HES-Xplain, our interactive platform designed to facilitate explainable artificial intelligence (XAI) techniques. In this use case, we dive into the classification with CNN models trained on the Cracks dataset. By the end of this notebook, you'll have a solid understanding of how to use a CNN to train the model and the Fidex algorithms to extract rules.\n",
     "\n",
-    "This notebook is an alternative to the [`Exploring CNN models and Fidex rule generation for MNIST classification`](TODO). It achieves the same goal but with a different dataset to show another application and result of our algorithms.\n",
+    "This notebook is an alternative to the [`Exploring CNN models and Fidex rule generation for MNIST classification`](mnist.ipynb). It achieves the same goal but with a different dataset to show another application and result of our algorithms.\n",
     "\n",
     "**Objectives:**\n",
     "\n",
@@ -219,7 +219,7 @@
     "\n",
     "It's time now to train our model. We will use a special type of model called a CNN (convolutional neural network).\n",
     "\n",
-    "We use our Python program called [cnnTrn](https://github.com/HES-XPLAIN/dimlpfidex/blob/main/trainings/cnnTrn.py). Let's begin with printing the program help message to observe every option available:"
+    "We use our Python program called [cnnTrn](https://hes-xplain.github.io/documentation/dimlpfidex/training-methods/cnntrn/). Let's begin with printing the program help message to observe every option available:"
    ]
   },
   {
@@ -421,7 +421,7 @@
    "source": [
     "# Local rules generation - Fidex\n",
     "\n",
-    "Now we can generate some local rules to explain the models' results. We can start with launching [Fidex](https://hes-xplain.github.io/documentation/algorithms/fidex/fidex/) on one test sample. This will generate a rule explaining the sample locally. It is local because the algorithm searches a rule only for one sample.\n",
+    "Now we can generate some local rules to explain the models' results. We can start with launching [Fidex](https://hes-xplain.github.io/documentation/dimlpfidex/fidex/fidex/) on one test sample. This will generate a rule explaining the sample locally. It is local because the algorithm searches a rule only for one sample.\n",
     "\n",
     "First of all, let's take a look at Fidex's arguments :"
    ]
@@ -691,7 +691,7 @@
    "metadata": {},
    "source": [
     "# Global ruleSet generation - FidexGlo\n",
-    "We have seen how to compute a rule that explains the decision of the model for a specific sample with the Fidex algorithm. But how could we get a general set of rules that characterizes the whole train dataset ? Using the [FidexGloRules](https://hes-xplain.github.io/documentation/algorithms/fidex/fidexglorules) algorithm, it is possible to achieve this.\n",
+    "We have seen how to compute a rule that explains the decision of the model for a specific sample with the Fidex algorithm. But how could we get a general set of rules that characterizes the whole train dataset ? Using the [FidexGloRules](https://hes-xplain.github.io/documentation/dimlpfidex/fidex/fidexglorules) algorithm, it is possible to achieve this.\n",
     "\n",
     "A global ruleset is a collection of rules that explains the model's decision for each sample present on the training portion of the dataset. Let's have a look at the fidexGloRules arguments:"
    ]
@@ -908,7 +908,7 @@
     "This rule is the first rule, which means that it's the rule with the maximum covering. Here, 984 train samples verify this rule. It is **100% fidel** with the model and is **100% accurate**.\n",
     "This rule says that if the 2528th pixel of the image is smaller than 102 and the 465th is greater than 102, then this image contains cracks. And this rule has **99.9% of confidence**.<br>\n",
     "\n",
-    "To get statistics on the test portion of the dataset, let's execute the [fidexGloStats](https://hes-xplain.github.io/documentation/algorithms/fidex/fidexglostats) algorithm. Beginning with an overview of the arguments of the program: "
+    "To get statistics on the test portion of the dataset, let's execute the [fidexGloStats](https://hes-xplain.github.io/documentation/dimlpfidex/fidex/fidexglostats) algorithm. Beginning with an overview of the arguments of the program: "
    ]
   },
   {
@@ -1096,7 +1096,7 @@
    "source": [
     "# Explanation and image generation\n",
     "\n",
-    "Now let's get the explanations on a few test samples. We will use the [fidexGlo](https://hes-xplain.github.io/documentation/algorithms/fidex/fidexglo) algorithm with the files `testDataSamples`, `testClassSamples`, and `testPredSamples` containing 10 test samples. <br>\n",
+    "Now let's get the explanations on a few test samples. We will use the [fidexGlo](https://hes-xplain.github.io/documentation/dimlpfidex/fidex/fidexglo) algorithm with the files `testDataSamples`, `testClassSamples`, and `testPredSamples` containing 10 test samples. <br>\n",
     "Beginning with an overview of the arguments of the program: "
    ]
   },
@@ -1444,19 +1444,16 @@
    "id": "605dcb45-4862-4268-bef2-068cf96de3d9",
    "metadata": {},
    "source": [
-    "# Références\n",
+    "# References\n",
     "\n",
-    "TODO : Article DimlpBT de Guido\n",
-    "Article Fidex de Guido (à venir)"
+    "HES-XPLAIN: [website](https://hes-xplain.github.io/), [Github page](https://github.com/HES-XPLAIN)\n",
+    "\n",
+    "Dataset: [source](https://www.kaggle.com/datasets/arunrk7/surface-crack-detection), [author](https://www.kaggle.com/aravindpcoder)\n",
+    "\n",
+    "Dimlpfidex: [Github repository](https://github.com/HES-XPLAIN/dimlpfidex), [documentation](https://hes-xplain.github.io/documentation/overview/)\n",
+    "\n",
+    "Algorithms: [randomForest](https://hes-xplain.github.io/documentation/dimlpfidex/training-methods/randforeststrn/), [Fidex](https://hes-xplain.github.io/documentation/dimlpfidex/fidex/fidex/), [FidexGloRules](https://hes-xplain.github.io/documentation/dimlpfidex/fidex/fidexglorules), [FidexGloStats](https://hes-xplain.github.io/documentation/dimlpfidex/fidex/fidexglostats)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73e18eda-640c-4393-97ef-a3b5b7f682e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
