Fix omnixai notebook for colab compatibility

--- a/use_case_dimlpfidex/omniXai_dimlpfidex.ipynb
+++ b/use_case_dimlpfidex/omniXai_dimlpfidex.ipynb
@@ -41,12 +41,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Colab compatibility\n",
     "use_colab = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if use_colab:\n",
+    "    # ensure the directory is empty\n",
+    "    !rm -rf * .config\n",
+    "\n",
+    "    !# install codebase from GitHub\n",
+    "    !git clone --no-checkout https://github.com/HES-XPLAIN/notebooks.git --depth=1 .\n",
+    "    !git config core.sparseCheckout true\n",
+    "    !git sparse-checkout set --cone\n",
+    "    !git sparse-checkout add use_case_dimlpfidex\n",
+    "    !git sparse-checkout reapply\n",
+    "    !git checkout main\n",
+    "\n",
+    "    # adjust folder structure\n",
+    "    !mv use_case_dimlpfidex/* .\n",
+    "    !rm -rf use_case_dimlpfidex/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if use_colab:\n",
+    "    # Install dependencies\n",
+    "    !pip install omnixai-community"
    ]
   },
   {
@@ -67,9 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/remy/code/HES-XPLAIN/notebooks/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import pathlib as pl\n",
@@ -112,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +201,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +249,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x79763011ee90>"
+       "<IPython.lib.display.IFrame at 0x7f99edec91d0>"
       ]
      },
      "metadata": {},
